# aoc2023

./: .gitignore  Cargo.toml  crates.nix  flake.nix
benches/: solution_bench.rs
src/: cli.rs  inputs.rs  main.rs
src/solutions/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d1.rs  d10.rs  d11.rs  d24.rs  mod.rs
