[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"
description = "Advent of Code 2023 solutions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.10", features = ["derive"] }
dotenv = "0.15.0"
itertools = "0.12.0"
reqwest = { version = "0.11.22", features = ["cookies"] }
tokio = { version = "1.34.0", features = ["full"] }
